# technopark_c_hw

./: CMakeLists.txt  README.md  countries.txt  index.html  main.c  script_install.sh
.github/workflows/: ci.yml  main.yml
file_data/: data.txt
include/: lib.h
lib/: CMakeLists.txt  countries.c  countries.h
lib_consistent/: lib_proc_consistent.c
lib_manage_data/: manage_data.c
lib_parallel/: lib_proc_parallel.c
tests/: CMakeLists.txt  gtests.cpp  test_countries.cpp
